# Toronto-anchored-City-of-Toronto-Fleet-Ferry-Performance-Dashboard

./: .gitattributes  .gitignore  CLAUDE.md  City Vehicle Availability .csv  Fleet_Services_GSD_Project_Brief.md  README.md  pyproject.toml
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/data/: City Vehicle Availability .csv  Light duty city vehicle utilization data.csv
.planning/phases/01-ingest-profile-dq-baseline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/gold/: dim_class_target.csv  dim_class_target.parquet  dim_date.csv  dim_date.parquet  dim_division.csv  dim_division.parquet  dim_time.csv  dim_time.parquet  fact_vehicle.csv  fact_vehicle.parquet
data/kpi/: availability_by_class.csv  availability_by_division.csv  exception_list.csv  ferry_heatmap.csv  ferry_seasonality.csv  ferry_yoy.csv  kpi_values.json  sales_redemption_gap.csv  underutilization_by_division.csv
deliverables/: data_dictionary.md  dq_report.md  kpi_definitions.md  measures_spec.md  report_spec.md  requirements_approach.md  stakeholder_engagement.md
src/fleet_analytics/: __init__.py  class_target.py  config.py  export.py  ingest.py  kpis.py  model.py  pipeline.py  profile.py  schemas.py  transform.py
tests/: conftest.py  test_class_target.py  test_derived_fields.py  test_dimensions.py  test_export.py  test_join_integrity.py  test_kpis.py  test_nulls.py  test_pipeline.py  test_profile.py  test_rowcounts.py  test_schemas.py
(+59 files in other folders)
