[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fleet-analytics"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckdb>=1.5,<2",
    "pandas>=2.2",
    "pyarrow>=16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pandera>=0.26",
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fleet_analytics"]
